Added License / Modified Credits form

--- a/CalculatorUI/credits.resx
+++ b/CalculatorUI/credits.resx
@@ -600,4 +600,24 @@
         cJWw3xX9u6JfoPW7on9X9Ku1flf074p+tdbviv5d0a/S+r//+/8BPTxUq6Ub7iwAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="textBoxDescription.Text" xml:space="preserve">
+    <value>Description
+----------------
+Polynomial Calculator V 0.1
+
+This application enables you to do the following :
+- Add / Subtract Polynomials
+- Multiply / Divide Poylnomials
+- Finding the GCD, Modulus of polynomials
+
+-------------------
+Licensed under the :
+Apache License V 2.0
+visit : http://www.apache.org/licenses for details
+
+You may read the license file from the help menu.
+
+Thank you for using Polynomial Calculator V.01
+The PolynomialCalculator team.</value>
+  </data>
 </root>
